--- a/style.css
+++ b/style.css
@@ -27,15 +27,23 @@
   #score{
     color:black;
     font-size: 18pt;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     position:absolute;
     left: 10px;
     top: 510px;
   }
   #gameOver{
     color: red;
-    font-size: 20px;
+    font-size: 30px;
     position: absolute;
-    left: 160px;
+    left: 180px;
     top: 200px;
     visibility: hidden;
+  }
+  #reload{
+   
+    font-size: 25px;
+    position: absolute;
+    left: 10px;
+    top: 540px;
   }
