--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+html{
+  background: rgb(194, 216, 194);
+}
+#intro{
+  position: absolute;
+  left: 100px;
+  top: 35px;
+  color:rgb(199, 32, 177);
+  font-size: 18px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#title{
+  position: absolute;
+  left: 100px;
+  top: 8px;
+  color:black;
+  font-size: 40px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 #hero {
     background: #ff0000;
     width: 20px;
